added files and edits

--- a/index.html
+++ b/index.html
@@ -8,24 +8,43 @@
 </head>
 
 <body>
+    <h1>Welcome to My Resume!</h1>
     <nav>
-        <p>Lorem </p>
-        <p>ipsum </p>
-        <p>dolor </p>
-        <p>sit amet</p>
+        <p>
+            <a href="project 1.html">Project 1</a>
+            <a href="project 2.html">Project 2</a>
+        </p>
     </nav>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-        <span>Dolore, et voluptatem libero blanditiis.
-        </span>
-    </p>
+    <hr>
+    <h1>Don Chu</h1>
+    <p>My name is Don and I am a student studying Information Technology. I am particularly interested in Cloud
+        Technologies and Cybersecurity.</p>
     <main>
-        <h1>Main Section</h1>
-        <p>illum assumenda expedita cupiditate eveniet nisi vitae incidunt officia illo ab nemo
-            corrupti eligendi culpa laudantium obcaecati.</p>
+        <img width="20" src="20250907_114050.jpg" alt="Photo of Don Chu">
+        <address>
+            Don Chu<br>
+            <a href="mailto:do843748@ucf.edu">do843748@ucf.edu</a><br>
+            <a href="https://www.linkedin.com/in/don-ch"><img src="64px-LinkedIn_logo_initials.png" alt="" height="30" width="30"></a>
+        </address>
     </main>
     <hr>
     <section>
-        <h2>Section 2</h2>
+        <div>
+            <h2>Education</h2>
+            <dl>
+                <dt>
+                    University of Central Florida, Orlando, FL
+                </dt>
+                <dd>Bachelors of Science, Information Technology</dd>
+                <dt>
+                    Valencia College, Orlando, FL
+                </dt>
+                <dd>Associate of Arts, General Studies</dd>
+            </dl>
+        </div>
+    </section>
+    <section>
+        <h2>Experience</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
             Aliquam eget elit nec lacus sodales egestas id a massa.
             Fusce dignissim dolor quis elit sagittis laoreet.
