--- a/index.html
+++ b/index.html
@@ -8,23 +8,28 @@
 </head>
 
 <body>
-    <h1>Welcome to My Resume!</h1>
+    <h1>Welcome to My Resume Webpage!</h1>
     <nav>
         <p>
-            <a href="project 1.html">Project 1</a>
-            <a href="project 2.html">Project 2</a>
+            <a href="index.html">Home</a>
+            <a href="project1.html">Project 1</a>
+            <a href="project2.html">Project 2</a>
         </p>
     </nav>
     <hr>
     <h1>Don Chu</h1>
-    <p>My name is Don and I am a student studying Information Technology. I am particularly interested in Cloud
-        Technologies and Cybersecurity.</p>
+    <p>My name is Don and I am a student studying Information Technology at the University of Central Florida! I am
+        interested in Cloud
+        Technologies and Cybersecurity, but I also like learning programming and scripting. Outside of school I am a
+        Gamer, Online
+        Community Manager, JavaScript Developer, and Marketing Director of the Society of PC Building at UCF.</p>
     <main>
-        <img width="20" src="20250907_114050.jpg" alt="Photo of Don Chu">
+        <img width="20%" src="20250907_114050.jpg" alt="Photo of Don Chu">
         <address>
             Don Chu<br>
             <a href="mailto:do843748@ucf.edu">do843748@ucf.edu</a><br>
-            <a href="https://www.linkedin.com/in/don-ch"><img src="64px-LinkedIn_logo_initials.png" alt="" height="30" width="30"></a>
+            <a href="https://www.linkedin.com/in/don-ch"><img src="64px-LinkedIn_logo_initials.png" alt="" height="30"
+                    width="30"></a>
         </address>
     </main>
     <hr>
@@ -35,21 +40,51 @@
                 <dt>
                     University of Central Florida, Orlando, FL
                 </dt>
-                <dd>Bachelors of Science, Information Technology</dd>
+                <dd>BS in Information Technology, 2026</dd>
+                <br>
                 <dt>
                     Valencia College, Orlando, FL
                 </dt>
-                <dd>Associate of Arts, General Studies</dd>
+                <dd>AA in General Studies, 2024</dd>
             </dl>
+            <h3>Honors</h3>
+
+            <ul>
+                <li>Member of National Society of Leadership and Success</li>
+                <li>Valencia College President's List x3</li>
+                <li>UCF President's Honor Roll</li>
+            </ul>
         </div>
     </section>
     <section>
         <h2>Experience</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-            Aliquam eget elit nec lacus sodales egestas id a massa.
-            Fusce dignissim dolor quis elit sagittis laoreet.
-            Phasellus ut rutrum lectus, vitae semper sapien.</p>
+        <dl>
+            <dt>
+                HealthIT Intern - Service Desk and Client Support
+            </dt>
+            <dd>University of Central Florida - College of Medicine</dd>
+            <br>
+            <ul>
+                <li>Managed tickets and tasks using ServiceNow in daily service desk activities, adhering to standard procedures.</li>
+                <li>Performed repair and imaging on laptops and desktop computers, redeploying them for normal use in medical facilities.</li>
+                <li>Experimented with implementing Microsoft Defender Endpoint with Debian to help improve security oversight on Linux machines in the company environment.</li>
+                <li>Efficiently communicated with clients to troubleshoot technical issues.</li>
+                <li>Liased with Client Support team to perform daily responsibilities.</li>
+            </ul>
+        </dl>
     </section>
-
+    <section>
+        <h2>Skills</h2>
+        <ul>
+            <li>C</li>
+            <li>Python</li>
+            <li>Java</li>
+            <li>JavaScript</li>
+            <li>Windows & Windows Server</li>
+            <li>Linux</li>
+        </ul>
+    </section>
+    <hr>
+    <br>
 
 </body>
