--- a/project2.html
+++ b/project2.html
@@ -4,32 +4,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome</title>
+    <title>Project 2</title>
 </head>
 
 <body>
     <nav>
-        <p>Lorem </p>
-        <p>ipsum </p>
-        <p>dolor </p>
-        <p>sit amet</p>
+        <p>
+            <a href="index.html">Home</a>
+            <a href="project1.html">Project 1</a>
+            <a href="project2.html">Project 2</a>
+        </p>
     </nav>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-        <span>Dolore, et voluptatem libero blanditiis.
-        </span>
-    </p>
     <main>
-        <h1>Main Section</h1>
-        <p>illum assumenda expedita cupiditate eveniet nisi vitae incidunt officia illo ab nemo
-            corrupti eligendi culpa laudantium obcaecati.</p>
+        <h1>Windows Server Active Directory Project</h1>
+        <p>In this project, I set up Active Directory on Windows Server along with various Groups and Organizational Units.
+            With them, I gave different permissions and group policies.
+        </p>
+        <iframe src="GPO.pdf" width="50%" height="600px"></iframe>
     </main>
     <hr>
     <section>
-        <h2>Section 2</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-            Aliquam eget elit nec lacus sodales egestas id a massa.
-            Fusce dignissim dolor quis elit sagittis laoreet.
-            Phasellus ut rutrum lectus, vitae semper sapien.</p>
+        <h2>Summary</h2>
+        <p> Applied permissions to various containers to control computer and user behavior, granting and restricting access to certain features and settings.</p>
     </section>
 
 
