--- a/project1.html
+++ b/project1.html
@@ -4,32 +4,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome</title>
+    <title>Project 1</title>
 </head>
 
 <body>
     <nav>
-        <p>Lorem </p>
-        <p>ipsum </p>
-        <p>dolor </p>
-        <p>sit amet</p>
+
+        <p>
+            <a href="index.html">Home</a>
+            <a href="project1.html">Project 1</a>
+            <a href="project2.html">Project 2</a>
+        </p>
     </nav>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-        <span>Dolore, et voluptatem libero blanditiis.
-        </span>
-    </p>
     <main>
-        <h1>Main Section</h1>
-        <p>illum assumenda expedita cupiditate eveniet nisi vitae incidunt officia illo ab nemo
-            corrupti eligendi culpa laudantium obcaecati.</p>
+        <h1>Network Projects</h1>
+        <p>In these personal projects, I setup my Network Attached Storage unit as a network wide adblocker, 
+            and as a cloud drive to store my school assignments.</p>
+        <img width="50%" src="docker.png" alt="">
+        <img width="17%" src="pihole.png" alt="">
+        <br>
+        <img width="40%" src="clouddrive.png" alt="">
     </main>
     <hr>
     <section>
-        <h2>Section 2</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-            Aliquam eget elit nec lacus sodales egestas id a massa.
-            Fusce dignissim dolor quis elit sagittis laoreet.
-            Phasellus ut rutrum lectus, vitae semper sapien.</p>
+        <h2>Summary</h2>
+        <p>Installed Pi-Hole using a Docker container on a Synology NAS and configured home router to use DNS. Additionally set up </p>
     </section>
 
 
