--- a/index.html
+++ b/index.html
@@ -34,27 +34,25 @@
     </main>
     <hr>
     <section>
-        <div>
-            <h2>Education</h2>
-            <dl>
-                <dt>
-                    University of Central Florida, Orlando, FL
-                </dt>
-                <dd>BS in Information Technology, 2026</dd>
-                <br>
-                <dt>
-                    Valencia College, Orlando, FL
-                </dt>
-                <dd>AA in General Studies, 2024</dd>
-            </dl>
-            <h3>Honors</h3>
+        <h2>Education</h2>
+        <dl>
+            <dt>
+                University of Central Florida, Orlando, FL
+            </dt>
+            <dd>BS in Information Technology, 2026</dd>
+            <br>
+            <dt>
+                Valencia College, Orlando, FL
+            </dt>
+            <dd>AA in General Studies, 2024</dd>
+        </dl>
+        <h3>Honors</h3>
 
-            <ul>
-                <li>Member of National Society of Leadership and Success</li>
-                <li>Valencia College President's List x3</li>
-                <li>UCF President's Honor Roll</li>
-            </ul>
-        </div>
+        <ul>
+            <li>Member of National Society of Leadership and Success</li>
+            <li>Valencia College President's List x3</li>
+            <li>UCF President's Honor Roll</li>
+        </ul>
     </section>
     <section>
         <h2>Experience</h2>
@@ -65,9 +63,12 @@
             <dd>University of Central Florida - College of Medicine</dd>
             <br>
             <ul>
-                <li>Managed tickets and tasks using ServiceNow in daily service desk activities, adhering to standard procedures.</li>
-                <li>Performed repair and imaging on laptops and desktop computers, redeploying them for normal use in medical facilities.</li>
-                <li>Experimented with implementing Microsoft Defender Endpoint with Debian to help improve security oversight on Linux machines in the company environment.</li>
+                <li>Managed tickets and tasks using ServiceNow in daily service desk activities, adhering to standard
+                    procedures.</li>
+                <li>Performed repair and imaging on laptops and desktop computers, redeploying them for normal use in
+                    medical facilities.</li>
+                <li>Experimented with implementing Microsoft Defender Endpoint with Debian to help improve security
+                    oversight on Linux machines in the company environment.</li>
                 <li>Efficiently communicated with clients to troubleshoot technical issues.</li>
                 <li>Liased with Client Support team to perform daily responsibilities.</li>
             </ul>
