--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome</title>
+    <link rel="stylesheet" href="layout.css">
 </head>
 
 <body>
@@ -24,56 +25,54 @@
         Gamer, Online
         Community Manager, JavaScript Developer, and Marketing Director of the Society of PC Building at UCF.</p>
     <main>
-        <img width="20%" src="20250907_114050.jpg" alt="Photo of Don Chu">
-        <address>
-            Don Chu<br>
-            <a href="mailto:do843748@ucf.edu">do843748@ucf.edu</a><br>
-            <a href="https://www.linkedin.com/in/don-ch"><img src="64px-LinkedIn_logo_initials.png" alt="" height="30"
-                    width="30"></a>
-        </address>
-    </main>
-    <hr>
-    <section>
-        <h2>Education</h2>
-        <dl>
-            <dt>
-                University of Central Florida, Orlando, FL
-            </dt>
-            <dd>BS in Information Technology, 2026</dd>
-            <br>
-            <dt>
-                Valencia College, Orlando, FL
-            </dt>
-            <dd>AA in General Studies, 2024</dd>
-        </dl>
-        <h3>Honors</h3>
-
-        <ul>
-            <li>Member of National Society of Leadership and Success</li>
-            <li>Valencia College President's List x3</li>
-            <li>UCF President's Honor Roll</li>
-        </ul>
-    </section>
-    <section>
-        <h2>Experience</h2>
-        <dl>
-            <dt>
-                HealthIT Intern - Service Desk and Client Support
-            </dt>
-            <dd>University of Central Florida - College of Medicine</dd>
-            <br>
+        <section>
+            <img width="300" src="20250907_114050.jpg" alt="Photo of Don Chu">
+            <address>
+                Don Chu<br>
+                <a href="mailto:do843748@ucf.edu">do843748@ucf.edu</a>
+                <a href="https://www.linkedin.com/in/don-ch"><img src="64px-LinkedIn_logo_initials.png" alt=""
+                        height="30" width="30"></a>
+            </address>
+            <hr>
+            <h2>Education</h2>
+            <dl>
+                <dt>
+                    University of Central Florida, Orlando, FL
+                </dt>
+                <dd>BS in Information Technology, 2026</dd>
+                <dt>
+                    Valencia College, Orlando, FL
+                </dt>
+                <dd>AA in General Studies, 2024</dd>
+            </dl>
+            <h3>Honors</h3>
             <ul>
-                <li>Managed tickets and tasks using ServiceNow in daily service desk activities, adhering to standard
-                    procedures.</li>
-                <li>Performed repair and imaging on laptops and desktop computers, redeploying them for normal use in
-                    medical facilities.</li>
-                <li>Experimented with implementing Microsoft Defender Endpoint with Debian to help improve security
-                    oversight on Linux machines in the company environment.</li>
-                <li>Efficiently communicated with clients to troubleshoot technical issues.</li>
-                <li>Liased with Client Support team to perform daily responsibilities.</li>
+                <li>Member of National Society of Leadership and Success</li>
+                <li>Valencia College President's List x3</li>
+                <li>UCF President's Honor Roll</li>
             </ul>
-        </dl>
-    </section>
+        </section>
+    </main>
+
+    <h2>Experience</h2>
+
+    <h4>HealthIT Intern - Service Desk and Client Support</h4>
+
+    <h5>University of Central Florida - College of Medicine</h5>
+    <ul>
+        <li>Managed tickets and tasks using ServiceNow in daily service desk activities, adhering to
+            standard
+            procedures.</li>
+        <li>Performed repair and imaging on laptops and desktop computers, redeploying them for
+            normal use in
+            medical facilities.</li>
+        <li>Experimented with implementing Microsoft Defender Endpoint with Debian to help improve
+            security
+            oversight on Linux machines in the company environment.</li>
+        <li>Efficiently communicated with clients to troubleshoot technical issues.</li>
+        <li>Liased with Client Support team to perform daily responsibilities.</li>
+    </ul>
+
     <section>
         <h2>Skills</h2>
         <ul>
@@ -87,5 +86,4 @@
     </section>
     <hr>
     <br>
-
 </body>
