--- a/project1.html
+++ b/project1.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project 1</title>
+    <link rel="stylesheet" href="layout.css">
 </head>
 
 <body>
@@ -20,15 +21,15 @@
         <h1>Network Projects</h1>
         <p>In these personal projects, I setup my Network Attached Storage unit as a network wide adblocker, 
             and as a cloud drive to store my school assignments.</p>
-        <img width="50%" src="docker.png" alt="">
-        <img width="17%" src="pihole.png" alt="">
-        <br>
-        <img width="40%" src="clouddrive.png" alt="">
+        <img width="800" src="docker.png" alt=""><br>
+        <img width="350" src="pihole.png" alt="">
+        <img width="740" src="pihole2.png" alt=""><br>
+        <img width="800" src="clouddrive.png" alt="">
     </main>
     <hr>
     <section>
         <h2>Summary</h2>
-        <p>Installed Pi-Hole using a Docker container on a Synology NAS and configured home router to use DNS. Additionally set up </p>
+        <p>Installed Pi-Hole using a Docker container on a Synology NAS and configured home router to use DNS. Additionally set up a local storage network that can be accessed remotely.</p>
     </section>
 
 
