--- a/project2.html
+++ b/project2.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project 2</title>
+    <link rel="stylesheet" href="layout.css">
 </head>
 
 <body>
@@ -20,7 +21,7 @@
         <p>In this project, I set up Active Directory on Windows Server along with various Groups and Organizational Units.
             With them, I gave different permissions and group policies.
         </p>
-        <iframe src="GPO.pdf" width="50%" height="600px"></iframe>
+        <iframe src="GPO.pdf" width="800" height="900" style="border:1px solid black;"></iframe>
     </main>
     <hr>
     <section>
