--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <address>
                 Don Chu<br>
                 <a href="mailto:do843748@ucf.edu">do843748@ucf.edu</a>
-                <a href="https://www.linkedin.com/in/don-ch"><img src="64px-LinkedIn_logo_initials.png" alt=""
+                <a href="https://www.linkedin.com/in/don-ch"><img src="64px-LinkedIn_logo_initials.png" alt="linkedin logo"
                         height="30" width="30"></a>
             </address>
             <hr>
@@ -56,9 +56,9 @@
 
     <h2>Experience</h2>
 
-    <h4>HealthIT Intern - Service Desk and Client Support</h4>
+    <h3>HealthIT Intern - Service Desk and Client Support</h3>
 
-    <h5>University of Central Florida - College of Medicine</h5>
+    <h4>University of Central Florida - College of Medicine</h4>
     <ul>
         <li>Managed tickets and tasks using ServiceNow in daily service desk activities, adhering to
             standard
