--- a/project2.html
+++ b/project2.html
@@ -16,18 +16,21 @@
             <a href="project2.html">Project 2</a>
         </p>
     </nav>
+    <hr>
     <main>
         <h1>Windows Server Active Directory Project</h1>
-        <p>In this project, I set up Active Directory on Windows Server along with various Groups and Organizational Units.
+        <section>
+            <h2>Summary</h2>
+            <p> Applied permissions to various containers to control computer and user behavior, granting and
+                restricting access to certain features and settings.</p>
+        </section>
+        <p>In this project, I set up Active Directory on Windows Server along with various Groups and Organizational
+            Units.
             With them, I gave different permissions and group policies.
         </p>
         <iframe src="GPO.pdf" width="800" height="900" style="border:1px solid black;"></iframe>
     </main>
     <hr>
-    <section>
-        <h2>Summary</h2>
-        <p> Applied permissions to various containers to control computer and user behavior, granting and restricting access to certain features and settings.</p>
-    </section>
 
 
 </body>
