moved some headers

--- a/project1.html
+++ b/project1.html
@@ -25,7 +25,7 @@
         <p>Installed Pi-Hole using a Docker container on a Synology NAS and configured home router to use DNS. Additionally set up a local storage network that can be accessed remotely.</p>
     </section>
         <p>In these personal projects, I setup my Network Attached Storage unit as a network wide adblocker, 
-            and as a cloud drive to store my school assignments.</p>
+            and as a cloud drive to store my school assignments. From this project I gained a better understanding of configuring network devices and their versatility.</p>
         <img width="800" src="docker.png" alt=""><br>
         <img width="350" src="pihole.png" alt="">
         <img width="740" src="pihole2.png" alt=""><br>
