--- a/project2.html
+++ b/project2.html
@@ -25,8 +25,7 @@
                 restricting access to certain features and settings.</p>
         </section>
         <p>In this project, I set up Active Directory on Windows Server along with various Groups and Organizational
-            Units.
-            With them, I gave different permissions and group policies.
+            Units. With them, I gave different permissions and group policies. From this project I learned how to grant different permissions to different container classes in Active Directory.
         </p>
         <iframe src="GPO.pdf" width="800" height="900" style="border:1px solid black;"></iframe>
     </main>
